--- a/spec/runner.html
+++ b/spec/runner.html
@@ -15,11 +15,16 @@
     <div id="fixtures"></div>
     <script src="http://chaijs.com/chai.js"></script>
     <script src="../node_modules/mocha/mocha.js"></script>
+    <script src="../node_modules/sinon/pkg/sinon.js"></script>
     <script src="../bower_components/requirejs/require.js"></script>
     <script src="../browser/noflo-amd.js"></script>
-    <script>mocha.setup('bdd');</script>
+    <script>
+      mocha.setup('bdd');
+      expect = chai.expect;
+    </script>
     <script src="./Configure.js"></script>
     <script src="./Require.js"></script>
+    <script src="./BrowserifyRequire.js"></script>
     <script>
       if (window.mochaPhantomJS) {
         mochaPhantomJS.run();
