Renamed "Require.coffee" -> "AmdRequire.coffee".

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -23,7 +23,7 @@
       expect = chai.expect;
     </script>
     <script src="./Configure.js"></script>
-    <script src="./Require.js"></script>
+    <script src="./AmdRequire.js"></script>
     <script src="./BrowserifyRequire.js"></script>
     <script>
       if (window.mochaPhantomJS) {
